2003-05-07  Jordi Mallach  <jordi@sindominio.net>

	* configure.in: Added "ca" to ALL_LINGUAS.

2003-05-07  Christian Neumair  <chris@gnome-de.org>

	* Nuvola/metacity-1/.cvsignore: Added.
	* Galaxy/index.theme.in: Marked Name and Comment fields
	for translation.
	* Galaxy/index.theme: Removed.
	* configure.in: Added "de" to ALL_LINGUAS.

2003-05-07  Christian Rose  <menthos@menthos.com>

	* configure.in: Added "sv" to ALL_LINGUAS.

2003-05-03  Andrew Sobala  <aes@gnome.org>

	* configure.in (AC_OUTPUT): stop duplicate creation of Nuvola/metacity-1/Makefile

2003-05-01  Dennis Cranston <dennis_cranston at yahoo com>
       * Galaxy/gtk-2.0/galaxy_theme_draw.c:  Prevent a division by zero crash.

2003-04-29 Christian Schaller <uraeus@gnome.org>
	* Added Nuvola metacity theme by Josselin Mouette
	* Added some smaller SVG files for Nuvola by Adam Hooper 

2003-05-01  Yanko Kaneti  <yaneti@declera.com>

	* configure.in (AC_OUTPUT): create Nuvola/metacity-1/Makefile
	* Makefile.am (NUVOLA_TAR_FILES): add the metacity wm theme files. 
	* Nuvola/Makefile.am (SUBDIRS): actually use the metacity theme. 
	* gnome-themes-estras.spec.in: use GTK_BINARY_VERSION

2003-04-21  Alex Duggan  <aldug@gnome.org>

	* TODO: Initial import
	
	* Makefile.am: s/${TAR}/tar to work around problem on rh9

2003-04-18 Christian Schaller <uraues@gnome.org>
	* Update Nuvola metatheme
	* Adding Smooth Winther GTK theme to Nuvola
	* Removed the use of Automake 1.4 as smooth need 1.6
	* make tarballs don't work for me since ${TAR} gets translated into null
	* the iconrc files includes fixed paths, they need to be made into iconrc.in files that get the path from the build, the iconrc files are in the BlueSphere/gtk-2.0 and Nuvola/gtk-2.0 dirs

2003-04-17  Alex Duggan  <aldug@astrolinux.com>

	* README: update with instructions for making releases
	and building tarballs

2003-04-17  Alex Duggan  <aldug@astrolinux.com>
	
	* .cvsignore:
	add gnome-themes-extras.spec
	
	* BlueSphere/.cvsignore: